test/compile_errors/stage1/obj/comptime_slice_of_undefined_pointer_non-zero_len.zig
export fn entry() void {
    const slice = @as([*]i32, undefined)[0..1];
    _ = slice;
}

// comptime slice of undefined pointer non-zero len
//
// tmp.zig:2:41: error: non-zero length slice of undefined pointer
